--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,20 @@
 #Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/smartcontact
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+#Email Details
+email.service.account=cloud.contact.member@gmail.com
+email.service.password=wbsaexkmsvtzkaji
+#Oauth2
+spring.security.oauth2.client.registration.google.client-id=272452033237-ktbhr2rofvkmfevrnlpjnn85jj25b8md.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+#Payment
+razorpay.key.id=rzp_test_zm7PDkysQKOrmH
+rezorpay.key.secret=So54nU9X7X4esPxIne1JJpLL
