--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 #Email Details
-email.service.account=Email id
+email.service.account=
 email.service.password=
 #Oauth2
 spring.security.oauth2.client.registration.google.client-id=
